Fixed some layout issues in search.ejs

--- a/public/style.css
+++ b/public/style.css
@@ -82,7 +82,7 @@ margin-left: 20px;
 }
 
 .movie-poster {
-    width: 130px;
+    width: 92px;
 }
 
 .details-poster {
